# setlog-fcpxml

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  fcpxml_generator.py  hotreload.py  main.py  pyproject.toml  test_runner.py  timeline.fcpxml  timeline_edit.py
tests/: test_fcpxml_generator.py  test_main.py  test_timeline_edit.py
