[project]
name = "setlog-davinci-resolve-integration"
version = "0.1.0"
description = "Generate simple FCPXML timelines for DaVinci Resolve from a media folder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
setlog-fcpxml = "cli:main"
setlog-fcpxml-gui = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["cli.py", "fcpxml_generator.py", "main.py", "timeline_edit.py"]
