[project]
name = "setlog-davinci-resolve-integration"
version = "0.1.0"
description = "Generate simple FCPXML timelines for DaVinci Resolve from a media folder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
setlog-fcpxml = "cli:main"
setlog-fcpxml-gui = "main:main"
test = "test_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "cli.py",
    "fcpxml_generator.py",
    "main.py",
    "test_runner.py",
    "timeline_edit.py",
]

[tool.ruff]
target-version = "py312"

[tool.ty.environment]
python-version = "3.12"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]
